--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,6 +12,9 @@
       action=""
       method="post"
     >
+    <div>
+      <po-loading-overlay [hidden]="isHideLoading" [p-screen-lock]="true"></po-loading-overlay>
+    </div>
       <div class="form-group">
         <po-login p-label="Login" formControlName="email"> </po-login>
       </div>
